criação de conexão com user usando postgresql

--- a/UserService/appsettings.json
+++ b/UserService/appsettings.json
@@ -6,5 +6,8 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
+  "ConnectionStrings": {
+    "PostgreSqlConnectionString": "Host=localhost;Port=5432;Username=postgres;Password=postgres;Database=user_service;"
+  },
   "AllowedHosts": "*"
 }
