implementando post service

--- a/PostService/appsettings.json
+++ b/PostService/appsettings.json
@@ -6,5 +6,8 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
+  "ConnectionStrings": {
+    "PostgreSqlConnectionString": "Host=localhost;Port=5432;Username=postgres;Password=postgres;Database=post_service;"
+  },
   "AllowedHosts": "*"
 }
