Refactor de postController

--- a/PostService/appsettings.json
+++ b/PostService/appsettings.json
@@ -7,7 +7,8 @@
     }
   },
   "ConnectionStrings": {
-    "PostgreSqlConnectionString": "Host=localhost;Port=5432;Username=postgres;Password=postgres;Database=post_service;"
+    "PostgreSqlConnectionString": "Host=localhost;Port=5432;Username=postgres;Password=postgres;Database=post_service;",
+    "PostBackgroundServiceConnectionString": "Host=localhost;Port=5432;Username=postgres;Password=postgres;Database=post_background_service;"
   },
   "AllowedHosts": "*"
 }
