inclusao de constante para nome das filas

--- a/PostService/PostService.csproj
+++ b/PostService/PostService.csproj
@@ -21,4 +21,8 @@
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.1.4" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Service.Common\Service.Common.csproj" />
+  </ItemGroup>
+
 </Project>
