--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,7 +14,7 @@ services:
     networks:
       - event-driven-network
 
-  pgadmin-code-brother:
+  pgadmin-postgresql:
     image: 'dpage/pgadmin4'
     environment:
       PGADMIN_DEFAULT_EMAIL: "xawe@api.com.br"
