--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -36,6 +36,15 @@ services:
       - postgresql-db
     networks:
       - event-network
+  
+  consul-discovery:
+    image: "consul:latest"
+    ports:
+      - "8500:8500"
+    depends_on:
+      - postgresql-db
+    networks:
+      - event-network
 
 networks: 
   event-network:
